--- a/index.html
+++ b/index.html
@@ -38,15 +38,32 @@
             <div class="slider__item">
                 <h1 class="slider__title">Agency</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
-                <p class="slider__text">sdasdasdadfas daushsfuas shfas fuahs fua sfuh asufh asufhaus fauhfsd iass fia sfhias fias fiahsf iashf iaf haisf</p>
+                <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                    dictum eleifend mi sit amet lucus.</p>
             </div>
-
             <div class="slider__item">
-                <div class="text">Caption Two</div>
+                <h1 class="slider__title">Entertainment</h1>
+                <h2 class="slider__title--sub">freebie psd download</h2>
+                <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                    dictum eleifend mi sit amet lucus.</p>
             </div>
-
             <div class="slider__item">
-                <div class="text">Caption Three</div>
+                <h1 class="slider__title">challenges</h1>
+                <h2 class="slider__title--sub">freebie psd download</h2>
+                <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                    dictum eleifend mi sit amet lucus.</p>
+            </div>
+            <div class="slider__item">
+                <h1 class="slider__title">achievements</h1>
+                <h2 class="slider__title--sub">freebie psd download</h2>
+                <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                    dictum eleifend mi sit amet lucus.</p>
+            </div>
+            <div class="slider__item">
+                <h1 class="slider__title">goals</h1>
+                <h2 class="slider__title--sub">freebie psd download</h2>
+                <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                    dictum eleifend mi sit amet lucus.</p>
             </div>
 
         </div>
@@ -55,6 +72,8 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
     </div>
     <script src="slider.js"></script>
