--- a/index.html
+++ b/index.html
@@ -38,30 +38,35 @@
             <div class="slider__item">
                 <h1 class="slider__title">Agency</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
+                <hr class="slider__border">
                 <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                     dictum eleifend mi sit amet lucus.</p>
             </div>
             <div class="slider__item">
                 <h1 class="slider__title">Entertainment</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
+                <hr class="slider__border">
                 <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                     dictum eleifend mi sit amet lucus.</p>
             </div>
             <div class="slider__item">
                 <h1 class="slider__title">challenges</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
+                <hr class="slider__border">
                 <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                     dictum eleifend mi sit amet lucus.</p>
             </div>
             <div class="slider__item">
                 <h1 class="slider__title">achievements</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
+                <hr class="slider__border">
                 <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                     dictum eleifend mi sit amet lucus.</p>
             </div>
             <div class="slider__item">
                 <h1 class="slider__title">goals</h1>
                 <h2 class="slider__title--sub">freebie psd download</h2>
+                <hr class="slider__border">
                 <p class="slider__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                     dictum eleifend mi sit amet lucus.</p>
             </div>
@@ -76,6 +81,41 @@
             <span class="dot" onclick="currentSlide(5)"></span>
         </div>
     </div>
+    <section class="client" id="work">
+        <div class="client__info">
+            <h2 class="client__title">our clients</h2>
+            <a href="#" class="client__link">View all <i class="fas fa-caret-right"></i></a>
+        </div>
+        <div class="client__customer">
+            <div class="client__customer--item">
+                <img src="/img/Layer4.png">
+            </div>
+            <div class="client__customer--item">
+                <img src="/img/Layer6.png">
+            </div>
+            <div class="client__customer--item">
+                <img src="/img/Layer7.png">
+            </div>
+            <div class="client__customer--item">
+                <img src="/img/Layer8.png">
+            </div>
+            <div class="client__customer--item">
+                <img src="/img/Layer10.png">
+            </div>
+        </div>
+    </section>
+    <section class="industries" id="industries">
+        <div class="industries__info">
+            <h2 class="industries__title">hello</h2>
+            <h3 class="industries__title--sub">lorem ipsum dolor sit amet</h3>
+            <hr class=industries__border>
+            <p class="industries__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. <br>Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                dictum eleifend mi sit amet lucus.</p>
+            <form action="#">
+                <button class="industries__button">see more about us</button>
+            </form>
+        </div>
+    </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
