--- a/index.html
+++ b/index.html
@@ -116,6 +116,42 @@
             </form>
         </div>
     </section>
+    <section class="experience" id="services">
+        <div class="experience__info">
+            <h2 class="experience__title">experience</h2>
+            <h3 class="experience__title--sub">all expert digital services</h3>
+            <hr class="experience__border">
+            <p class="experience__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. <br>Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                dictum eleifend mi sit amet lucus.</p>
+            <form action="#">
+                <button class="experience__button">see our sercices</button>
+            </form>
+        </div>
+        <div class="experience__product">
+            <div class="experience__product--item">
+                <i class="fas fa-desktop"></i>
+                <h3 class="experience__product--title">
+                    website design & development
+                </h3>
+            </div>
+            <div class="experience__product--item">
+                <i class="far fa-paper-plane"></i>
+                <h3 class="experience__product--title">digital marketing</h3>
+            </div>
+            <div class="experience__product--item">
+                <i class="fas fa-lock"></i>
+                <h3 class="experience__product--title">
+                    web security & optimization
+                </h3>
+            </div>
+            <div class="experience__product--item">
+                <i class="fas fa-sliders-h"></i>
+                <h3 class="experience__product--title">
+                    conversion optimization
+                </h3>
+            </div>
+        </div>
+    </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
