--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h2 class="experience__title">experience</h2>
             <h3 class="experience__title--sub">all expert digital services</h3>
             <hr class="experience__border">
-            <p class="experience__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. <br>Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+            <p class="experience__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis. Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
                 dictum eleifend mi sit amet lucus.</p>
             <form action="#">
                 <button class="experience__button">see our sercices</button>
@@ -149,6 +149,33 @@
                 <h3 class="experience__product--title">
                     conversion optimization
                 </h3>
+            </div>
+        </div>
+    </section>
+    <section class="news" id="news">
+        <div class="news__info">
+            <h2 class="news__title">recent work</h2>
+            <hr class="news__border">
+            <p class="news__text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis.</p>
+        </div>
+
+        <div class="news__item">
+            <h2 class="news__item--title">CustomerDomain.com</h2>
+            <p class="news__item--info">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis.</p>
+            <hr class="news__item--border">
+            <div class="news__client">
+                <div class="news__client--name">
+                    <p class="news__name">Client</p>
+                    <p class="news__name">Location</p>
+                    <p class="news__name">Services</p>
+                    <p class="news__name">Website link</p>
+                </div>
+                <div class="news__client--answer">
+                    <p class="news__answer">: Customer</p>
+                    <p class="news__answer">: U.K</p>
+                    <p class="news__answer">: Search Engine Optimization</p>
+                    <p class="news__answer--web">: <span class="news__web">www.CustomerDomain.com</span></p>
+                </div>
             </div>
         </div>
     </section>
