--- a/index.html
+++ b/index.html
@@ -179,6 +179,27 @@
             </div>
         </div>
     </section>
+    <section class="cards">
+        <div class="cards__item">
+            <div class="cards__item--element">
+                <img src="/img/Layer30.png">
+            </div>
+            <div class="cards__item--element">
+                <img src="/img/Layer31.png">
+            </div>
+            <div class="cards__item--info">
+                <h2 class="cards__item--title">futurethink</h2>
+                <p class="cards__item--text"><span class="cards__bold">Futurethink.com</span> is the proffessional website which reserches and develops innovation for organizations using a refreshing and simple approach.
+                </p>
+                <a href="#">View detalis</a>
+            </div>
+        </div>
+        <div class="button">
+            <form action="#">
+                <button class="cards__button">show all</button>
+            </form>
+        </div>
+    </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
