--- a/index.html
+++ b/index.html
@@ -200,6 +200,57 @@
             </form>
         </div>
     </section>
+    <section class="focus">
+        <div class="focus__info">
+            <h2 class="focus__title">we focus</h2>
+            <h3 class="focus__title--sub">on key industries</h3>
+            <hr class="focus__border">
+            <p class="focus__text">Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.</p>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-camera-retro"></i>
+            <h3 class="focus__item--title">digital marketing</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-running"></i>
+            <h3 class="focus__item--title">sport & entertaiment</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-first-aid"></i>
+            <h3 class="focus__item--title">health & fitness</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-film"></i>
+            <h3 class="focus__item--title">law firms and real estates</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-user-clock"></i>
+            <h3 class="focus__item--title">professional services</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fab fa-pagelines"></i>
+            <h3 class="focus__item--title">fashion & beauty</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-utensils"></i>
+            <h3 class="focus__item--title">food & beverage</h3>
+        </div>
+        <div class="focus__item">
+            <i class="fas fa-gamepad"></i>
+            <h3 class="focus__item--title">games & comics</h3>
+        </div>
+        <div class="focus__item">
+            <i class="far fa-paper-plane"></i>
+            <h3 class="focus__item--title">travel & hotels</h3>
+        </div>
+        <div class="focus__item">
+            <form action="#">
+                <button class="focus__button">show all</button>
+            </form>
+        </div>
+
+
+    </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
