--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </form>
         </div>
     </section>
-    <section class="focus">
+    <section class="focus" id="who_we_are">
         <div class="focus__info">
             <h2 class="focus__title">we focus</h2>
             <h3 class="focus__title--sub">on key industries</h3>
@@ -250,6 +250,25 @@
         </div>
 
 
+    </section>
+    <section class="guide">
+        <div class="guide__photo">
+        </div>
+        <div class="guide__info">
+            <h2 class="guide__info--title">feature</h2>
+            <h3 class="guide__info--sub">marketing guide</h3>
+            <hr class="guide__info--border">
+            <p class="guide__info--text">Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis.<br>Ineger tincidunt, felis a placerat maximus, eros nulla daplinus dui, at facilisis enim odio at celit. Aenean
+                dictum eleifend mi sit amet lucus.</p>
+            <div class="guide__button">
+                <form action="#">
+                    <button class="guide__button--see">show all</button>
+                </form>
+                <form action="#">
+                    <button class="guide__button--download">download</button>
+                </form>
+            </div>
+        </div>
     </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
