--- a/index.html
+++ b/index.html
@@ -270,6 +270,40 @@
             </div>
         </div>
     </section>
+    <section class="blog">
+        <h2 class="blog__title">recent blog</h2>
+        <hr class="blog__border">
+        <p class="blog__text">
+            Maecenas suscipit imperdiet nisi ac hendreit. Nam congue felis ac massa rutrum pulvinar. Donec sodales eros sed efficiutur mattis.
+        </p>
+        <div class="blog__item">
+            <div class="blog__element">
+                <img src="/img/Layer43.png">
+                <h3 class="blog__element--title">Is there hope for the SEO profession?</h3>
+                <p class="blog__element--author">Post by Lawrence R. Smith</p>
+                <hr class="blog__element--border">
+                <p class="blog__element--text">Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.</p>
+                <a href="#" class="blog__element--link">Read more</a>
+            </div>
+            <div class="blog__element">
+                <img src="/img/Layer43_1.png">
+                <h3 class="blog__element--title">Is there hope for the SEO profession?</h3>
+                <p class="blog__element--author">Post by Esperanza A. Johson</p>
+                <hr class="blog__element--border">
+                <p class="blog__element--text">Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.</p>
+                <a href="#" class="blog__element--link">Read more</a>
+            </div>
+            <div class="blog__element">
+                <img src="/img/Layer43_2.png">
+                <h3 class="blog__element--title">Is there hope for the SEO profession?</h3>
+                <p class="blog__element--author">Post by Heather R. Williams</p>
+                <hr class="blog__element--border">
+                <p class="blog__element--text">Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.Donec nulla justo, phareta in nulla in, lacinia pulciar nunc rutrum nisi vei nib.</p>
+                <a href="#" class="blog__element--link">Read more</a>
+            </div>
+        </div>
+        <a href="#" class="blog__more">+ load more</a>
+    </section>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
