--- a/index.html
+++ b/index.html
@@ -304,6 +304,33 @@
         </div>
         <a href="#" class="blog__more">+ load more</a>
     </section>
+    <footer class="contact" id="contact">
+        <div class="contact__first">
+            <h2 class="contact__title">agency creative</h2>
+            <p class="contact__text">(c) 2015 k3nnyart. All rights reserved.</p>
+            <a href="#" class="contact__first--link">privacy policy</a>
+        </div>
+        <div class="contact__second">
+            <h2 class="contact__title">address</h2>
+            <p class="contact__text">ABC Agency Creative<br>411 Deer Haven Drive Greenville, SC 29601<br> Hours: Mon-Fri 9am - 6:00pm</p>
+        </div>
+        <div class="contact__third">
+            <h2 class="contact__title">get in Touch</h2>
+            <p class="contact__text">Tel: +1 234-567-890<br>Fax: +1 646-216-9789<br>Email: info@yourdomain.com</p>
+        </div>
+        <div class="contact__fourth">
+            <h2 class="contact__title">subscribe to our mailing list</h2>
+            <form>
+                <div class="inputwrapper">
+                    <label for="email" class="contact__email">
+                        <input type="email" name="email" id="email" placeholder="Enter your e-mail">
+                        <form action="#">
+                            <button class="contact__button"><i class="fas fa-envelope"></i></button>
+                        </form>
+                </div>
+            </form>
+        </div>
+    </footer>
     <script src="slider.js"></script>
     <script src="menu.js"></script>
 </body>
