--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="navbar__item"><a class="navbar__links" href="#services">services</a> </li>
                 <li class="navbar__item"><a class="navbar__links" href="#news">news</a> </li>
                 <li class="navbar__item"><a class="navbar__links" href="#who_we_are">who we are</a> </li>
-                <li class="navbar__item"><a class="navbar__links" href="#contact">contact</a> </li>
+                <li class="navbar__item"><a class="navbar__links" href="#contact">contactsadsa</a> </li>
             </ul>
         </nav>
         <div class="slider" id="slider">
